--- a/src/pages/over-ons.astro
+++ b/src/pages/over-ons.astro
@@ -3,22 +3,22 @@ import Layout from '../layouts/Layout.astro';
 
 import laboImage from '../assets/images/labo-min.jpg';
 
-const title = 'Over Elektro repair Mortsel';
-const description = 'Over Elektro repair Mortsel, een eenmansreparatiedienst voor al uw elektrische en elektronische toestellen.';
+const title = 'Over Elektro Repair Mortsel';
+const description = 'Over Elektro Repair Mortsel, een eenmansreparatiedienst voor al uw elektrische en elektronische toestellen.';
 ---
 
 <Layout title={title} description={description} classes="pb-24 / md:pt-24 md:pb-40">
     <div class="md:container | flex flex-col-reverse md:flex-row xl:grid | xl:grid-cols-12 | gap-10">
         <div class="content__text || container | flex flex-col | xl:col-span-5">
             <h1 class="mb-8">Over ons</h1>
-            <h2 class="mb-8"><span>Elektro repair Mortsel is een eenmansdienst die u helpt bij het herstellen van allerhande (elektronische) voorwerpen.</span>
+            <h2 class="mb-8"><span>Elektro Repair Mortsel is een eenmansdienst die u helpt bij het herstellen van allerhande (elektronische) voorwerpen.</span>
                 <span>Ik heb uitgebreide ervaring in de hersteldienst van Pioneer en ontwikkelde later als ingenieur optomechanische en elektronische toestellen bij Agfa.</span>
                 <span>Ook ben ik actief bij het populaire <a href="https://www.vzwtransitiezuidtrant.be/repair-caf%C3%A9" target="_blank">Repair Café Zuidrand</a>.</span>
             </h2>
             <a href="/diensten" class="btn btn--gap || mr-auto">Ontdek onze diensten</a>
         </div>
         <div class="xl:col-span-7">
-            <img class="content__image || mb-6 / md:mt-5" src={laboImage} alt="Elektro repair Mortsel" />
+            <img class="content__image || mb-6 / md:mt-5" src={laboImage} alt="Elektro Repair Mortsel" />
         </div>
     </div>
 </Layout>
