--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer>
     <div class="container | flex flex-col sm:grid sm:grid-cols-12 | gap-5 | items-start | pt-4 / pb-6">
         <div class="logo || logo--footer || sm:col-span-7 md:col-span-4 lg:col-span-5 xl:col-span-4">
-            <a href="/">Elektro repair Mortsel</a>
+            <a href="/">Elektro Repair Mortsel</a>
         </div>
         <div class="flex flex-col md:grid md:grid-cols-8 lg:grid-cols-7 xl:grid-cols-6 | sm:col-span-5 md:col-span-8 lg:col-span-7 xl:col-span-6 | md:mt-auto xl:mt-0">
             <div class="contact-info-1 || flex flex-col | md:col-span-4 xl:col-span-3 | md:mt-auto xl:mt-0">
