--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const mainClasses = classes ? classes : "pt-16 md:pt-24 / pb-24 md:pb-40";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		{description && <meta name="description" content={description} />}
-		<title>Elektro repair Mortsel{title && " | " + title}</title>
+		<title>Elektro Repair Mortsel{title && " | " + title}</title>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	</head>
 	<body>
