--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
             <div class="contact-info-2 || flex | md:col-span-4 lg:col-span-3 | md:mt-auto xl:mt-0">
                 <i class="fa-solid fa-location-dot || mt-1 / mr-4"></i> 
                 <div>
-                    Elektro repair Mortsel<br>
+                    Elektro Repair Mortsel<br>
                     Sint-Annalei 15<br>
                     2640 Mortsel
                 </div>
