--- a/src/pages/hersteltips.astro
+++ b/src/pages/hersteltips.astro
@@ -170,8 +170,8 @@ const description = 'Wilt u ontdekken waarom uw elektronisch apparaat het niet m
 
             <Accordeon>
                 <AccordeonHeader 
-                    title="Platenspeler" 
-                    icon="cassette-logo"
+                    title="Platen speler" 
+                    icon="pickup-logo"
                 />
                 <AccordeonContent 
                     problem="Plateau draait niet en motor draait niet" 
