added website design to diensten

--- a/src/pages/diensten.astro
+++ b/src/pages/diensten.astro
@@ -7,7 +7,7 @@ import electricsImg from '../assets/images/electrics-min.jpg'
 import boormachineImg from '../assets/images/boormachine.jpg'
 import toysImg from '../assets/images/toys-min.jpg'
 import restaurationsImg from '../assets/images/restaurations-min.jpg'
-
+import websiteImg from '../assets/images/website.jpg'
 
 const title = 'Diensten';
 const description = 'Ik herstel uw elektrische en/of elektronische toestellen. Ook de reparatie van oud speelgoed is mogelijk.';
@@ -58,7 +58,15 @@ const description = 'Ik herstel uw elektrische en/of elektronische toestellen. O
             <p>Ik kan die wellicht een nieuw leven geven!</p>
             <p>Zo bijvoorbeeld een 50's automaat van het merk 'Le Tigre' (zie foto).</p>
         </Card>
-    </div>
+        <Card 
+            cardTitle="Web site ontwerpen" 
+            cardImage={websiteImg}     
+         >
+           <p>Heb U een idee voor een in het oog springende web site?</p>
+           <p>Of heeft uw bestaande website een upgrade naar een moderne look nodig?</p>         
+           <p>Daar helpt de afdeling  <u><a href="https://prepressautomation.be/#webdesign">Web Design</a></u> u graag mee.</p> 
+        </Card>   
+     </div>
 </Layout>
 
 <style lang="scss">
