KBO en algemene voorwaarden

--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -11,10 +11,11 @@ const description = 'Algemene voorwaarden van Elektro Repair Mortsel';
                 <div>
                         <h2>Kosten</h2>
                         <p>Werkuren worden aangerekend per begonnen half uur, met een minimum van 1 uur. De werkuren omvatten ook het opzoeken en bestellen van vervangonderdelen.</p>
-                        <p>Verplaatsingskosten met de wagen worden aangerekend aan 0,4 euro/km. Bij andere verplaatsingen buiten Mortsel gelden de werkuren van vertrek tot terugkomst in de staanplaats.</p>
+                        <p>Verplaatsingskosten met de wagen worden aangerekend aan 0,4 euro/km. Bij verplaatsingen buiten Mortsel gelden de werkuren van vertrek tot terugkomst in de standplaats.</p>
                         <p>Een voorschot is vereist bij het bestellen van wisselstukken.</p>
-                        <p>De standaard bestekkost is 0,5 uur voor een eenvoudig toestel en 1 werkuur voor een complex toestel.</p>
-                        <p>Voor niet afgehaalde toestellen wordt een recyclagekost van 5 euro aangerekend</p>
+                        <p>De standaard bestekkost is 0,75 uur voor een eenvoudig toestel en 1,25 werkuur voor een complex toestel.</p>
+                        <p>Voor niet afgehaalde toestellen wordt een recyclagekost van 5 euro aangerekend.</p>
+                        <p>Soms lukt een herstelling uiteindelijk toch niet nadat een bestek was opgemaakt. In dat geval zijn de bestekkosten, kosten van de gebruikte vervangonderdelen en een deel van de werkuren nog steeds verschuldigd.</p>
                 </div>                
                 <div>
                         <h2>Niet afgehaalde toestellen</h2>
@@ -23,28 +24,38 @@ const description = 'Algemene voorwaarden van Elektro Repair Mortsel';
                 </div>
                 <div>
                         <h2>Plaats van herstelling</h2>
-                        <p>De toestellen dienen ter herstelling aangeboden te worden op het adres van de firma, samen met de benodigde kabels en test media.</p>
+                        <p>De toestellen dienen ter herstelling aangeboden te worden op het adres van de firma, samen met de afstandsbediening en de benodigde kabels en test media.</p>
                 </div>
                 <div>
                         <h2>Risico's</h2>
-                        <p>Moderne, niet professionele, toestellen zijn vaak vastgelijmd. Bij herstellen kan er dan beschadiging optreden van de behuizing. Dit wordt dan overlegd met de klant.</p>
+                        <p>Hoewel we er natuurlijk naar streven om het toestel in een betere conditie af te leveren, kan er soms wel iets misgaan bij het herstellen van een (oudere) toestel. 
+                        Die risico's worden dan bekeken met de klant en geven geen recht op een schadevergoeding. Eventueel wordt de herstelling gestopt.</p>
+                         <p>- Niet professionele toestellen zijn vaak moeilijk te openen/sluiten: moderne toestellen zijn vaak vastgelijmd en bij oudere toestellen (bv. stofzuigers, koffieautomaten, haardrogers) zijn de plastieken clipjes vaak verhard en kunnen afbreken.</p>
+                         <p>- Het mechanisch binnenwerk van platen-, CD-, mini-disc- en cassette- spelers is delicaat. Indien dit geopend moet worden om bv. tandwielen/riemen te vervangen of te smeren, kan er iets misgaan.</p>
+                         <p>- Bij een herstelling op een printplaat kan er soms een onderdeel (bv. IC) beschadigd worden dat moeilijk vervangbaar is.</p>
                 </div>
                 <div>
                         <h2>Garantie</h2>
-                        <p>Er is geen garantie op de herstelling, maar bij originele wisselstukken is er wel de officiële garantie van de fabrikant (zonder werkuren).</p>
+                        <p>Er is geen garantie op de herstelling bij toestellen ouder dan 4 jaar.</p>
+                        <p>Bij de recentere is er 6 maand garantie op de werkuren indien het toestel correct gebruikt werd, en de herstelling gebeurde met originele vervangonderdelen. Bij die originele onderdelen geldt ook de officiële garantie van de fabrikant.</p>
                 </div>
                 <div>
                         <h2>Betalingen</h2>
-                        <p>U hoeft geen BTW te betalen door de bijzondere vrijstelling voor kleine ondernemingen.</p>
-                        <p>Betalingen dienen te gebeuren binnen de 14 dagen na het versturen van de factuur.</p>
+                        <p>U hoeft geen BTW te betalen door de "bijzondere vrijstelling voor kleine ondernemingen" voor Prepress Automation.</p>
+                        <p>Betalingen dienen te gebeuren binnen de 14 dagen na het versturen van de factuur tenzij anders vermeld.</p>
                         <p>Na de vervaldatum wordt een administratieve kost aangerekend van 25 euro en een verwijlintrest van 3% per maand.</p>
-                </div>
-                <div>
+                        <p>E-facturatie via Peppol is niet mogelijk. Omdat Prepress Automation niet BTW-plichtig is, zou dat normaal geen probleem mogen zijn.</p>
+               </div>
+              <div>
                         <h2>Geschillen</h2>
                         <p>Enkel de rechtbanken van het gerechtelijk arrondissement waar de zetel van Prepress Automation gevestigd is, zijn bevoegd om kennis te nemen van eventuele geschillen.</p>
                         <p>De schadevergoeding in hoofde van Prepress Automation is beperkt tot hetgeen de aansprakelijkheidsverzekeraar uitkeert.</p>
                 </div>
-        </div>
+                 <div>
+                        <h2>Firma</h2>
+                        <p>"Elektro Repair Mortsel" is een afdeling van de firma "Prepress Automation" met KBO nr. 0790519118.</p>
+                </div>
+   </div>
 </Layout>
 
 <style lang="scss">
