--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -72,7 +72,7 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                 </div>
                 <div class="contact__business || flex">
                     <i class="fa-solid fa-briefcase || mr-4"></i>
-                    <p>BTWnr.: BE0790519118</p>
+                    <p>KBO nr.: 0790519118</p>
                 </div>
             </aside>
         </div>
